# 2048pp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  README.md  appveyor.yml  codecov.yml
CMake/: CompileOptions.cmake
Includes/G2048pp/: Block.hpp  Board.hpp  Enums.hpp  Game.hpp
Scripts/: Dockerfile.cosmic  Dockerfile.disco  Dockerfile.disco.clang-latest  Dockerfile.disco.gcc-latest  travis_build_codecov.sh  travis_build_docker.sh
Sources/G2048pp/: Block.cc  Board.cc  CMakeLists.txt  Game.cc  main.cc
UnitTest/: CMakeLists.txt  main.cc
